Fix frame lines on mobile devices and adjust dark mode toggle left position

--- a/src/index.css
+++ b/src/index.css
@@ -32,6 +32,7 @@
 	--text-darker: #1a1a1a;
 	--text-light: #f2f2f2;
 	--pad: 30px;
+	--padMobile: 19.5px;
 	--underline-color: #1a1a1a;
 	--timeline-line: #1a1a1a;
 	--mask-light: #ededed;
@@ -152,7 +153,7 @@ body.dark {
 
 .frame_line-left {
 	position: absolute;
-	left: 0;
+	left: 0px;
 	top: 0;
 	width: 1px;
 	height: 100%;
@@ -161,7 +162,7 @@ body.dark {
 
 .frame_line-right {
 	position: absolute;
-	right: 0;
+	right: 0px;
 	top: 0;
 	width: 1px;
 	height: 100%;
@@ -171,7 +172,7 @@ body.dark {
 .frame_line-top {
 	position: absolute;
 	left: 0;
-	top: 0;
+	top: 0px;
 	width: 100%;
 	height: 1px;
 	opacity: 0.6;
@@ -180,7 +181,7 @@ body.dark {
 .frame_line-bottom {
 	position: absolute;
 	left: 0;
-	bottom: 0;
+	bottom: 0px;
 	width: 100%;
 	height: 1px;
 	opacity: 0.6;
@@ -206,7 +207,7 @@ body.dark {
 	transition-property: background-color;
 	transition-duration: 0.9s;
 	transition-timing-function: cubic-bezier(0.1, 0.4, 0.2, 1);
-	opacity: 1;
+	opacity: 0.6;
 	backdrop-filter: blur(30px);
 	z-index: 4;
 }
@@ -220,7 +221,7 @@ body.dark {
 	transition-property: background-color;
 	transition-duration: 0.9s;
 	transition-timing-function: cubic-bezier(0.1, 0.4, 0.2, 1);
-	opacity: 1;
+	opacity: 0.6;
 	z-index: 4;
 }
 
@@ -233,7 +234,7 @@ body.dark {
 	transition-property: background-color;
 	transition-duration: 0.9s;
 	transition-timing-function: cubic-bezier(0.1, 0.4, 0.2, 1);
-	opacity: 1;
+	opacity: 0.6;
 }
 
 .mask_right {
@@ -245,27 +246,28 @@ body.dark {
 	transition-property: background-color;
 	transition-duration: 0.9s;
 	transition-timing-function: cubic-bezier(0.1, 0.4, 0.2, 1);
-	opacity: 1;
+	opacity: 0.6;
 }
 
 @media screen and (max-width: 768px) {
 	.mask_right,
 	.mask_left {
-		width: 20px;
+		width: calc(var(--padMobile) - 1px);
+		bottom: var(--padMobile);
 	}
 
 	.mask_top,
 	.mask_bottom {
-		height: 20px;
+		height: var(--padMobile);
 	}
 
 	#frame {
 		position: fixed;
 		z-index: 10;
-		left: 19px;
-		right: 19px;
-		top: 19px;
-		bottom: 19px;
+		left: var(--padMobile);
+		right: var(--padMobile);
+		top: var(--padMobile);
+		bottom: var(--padMobile);
 	}
 }
 
@@ -377,7 +379,7 @@ body.dark {
 
 .custom-box + h5 {
 	position: relative;
-	left: -2px;
+	left: 1px;
 	font-size: 18px;
 	font-weight: 400 !important;
 }
@@ -395,7 +397,7 @@ body.dark {
 
 	.custom-box + h5 {
 		font-size: 16px;
-		left: -2px;
+		left: 2px;
 	}
 
 	.custom-box {
